--- a/styles/057_countries.css
+++ b/styles/057_countries.css
@@ -71,11 +71,10 @@ h2, h4 {
 		width: 100%;
 		display: block;
 	  }
-	.holland_map,
-	 	.italy_map,
-		.mexico_map	{
+	.map1_6	{
     margin-top: 0px;
     grid-column: 1 / 3;
+		border:  1px solid blue;
     }
 
 .container3 {
