--- a/styles/057_countries.css
+++ b/styles/057_countries.css
@@ -82,18 +82,22 @@ h2, h4 {
 	grid-template-columns: 170px 170px;
 	/* Container nach oben schieben */
 	margin-top: -570px;
+
 	}
 
 	.container3 img {
 		width: 100%;
 		display: block;
 	  }
-	.holland_map,
-	 	.italy_map,
-		.mexico_map	{
+	.selectedMap	{
     margin-top: 0px;
     grid-column: 1 / 3;
     }
+
+	.flag1, .flag2,
+	.flag3, .flag4	{
+			border:  2px solid black;
+		}
 
 .container4 {
 	display: grid;
