--- a/styles/057_countries.css
+++ b/styles/057_countries.css
@@ -19,7 +19,12 @@ h2, h4 {
 	margin: 10px;
 
   }
+	h5 {
+	  text-align:center;
+	  grid-column: 1 / span 2;
+		margin-bottom: 20px;
 
+	  }
 .box1, .box2, .box3,
 .box4, .box5, .box6 {
   width: 90px;
@@ -38,6 +43,7 @@ h2, h4 {
 #container4,
 #container5,
 #container6,
+#container7,
 #settingBtn {
   visibility: hidden;
   }
@@ -59,6 +65,17 @@ h2, h4 {
     margin-top: 0px;
     grid-column: 1 / 3;
     }
+	#reStart, #gallery	{
+		width: 70px;
+	  color: green;
+	  text-align: center;
+	  background-color: lightyellow;
+	  border:  2px solid blue;
+	  border-radius: 1em 1em 1em 1em;
+
+		margin:  10px auto;
+	  padding: 1em;
+		}
 
 .container2 {
 	display: grid;
@@ -103,7 +120,8 @@ h2, h4 {
 	display: grid;
 	grid-template-columns: 170px 170px;
 	/* Container nach oben schieben */
-	margin-top: -614px;
+	margin-top: -570px;
+	/*margin-top: -620px;*/
 	}
 
 	.container4 img {
@@ -140,8 +158,13 @@ h2, h4 {
 	grid-template-columns: 170px 170px;
 	/* Container nach oben schieben */
 	margin-top: -570px;
-
 	}
+
+	.nextCountry h5 {
+	  text-align:center;
+	  grid-column: 1 / span 2;
+		margin: 10px;
+	  }
 
 	.container6 img {
 		width: 100%;
@@ -153,3 +176,26 @@ h2, h4 {
     margin-top: 0px;
     grid-column: 1 / 3;
     }
+
+.container7 {
+	display: grid;
+	grid-template-columns: 170px 170px;
+	}
+
+	.container7 img {
+  	width: 340px;
+  	display: block;
+		margin-bottom: 0px;
+    }
+
+	.gallery h2, h4 {
+	  text-align:center;
+	  grid-column: 1 / span 2;
+	/*	margin: 20px;*/
+	  }
+	.gallery h5	{
+	  text-align:center;
+	  grid-column: 1 / span 2;
+		margin: 60px;
+		color:red;
+	  }
