--- a/styles/057_countries.css
+++ b/styles/057_countries.css
@@ -61,27 +61,27 @@ h2, h4 {
   	width: 100%;
   	display: block;
     }
-  .world_map {
-    margin-top: 0px;
-    grid-column: 1 / 3;
-    }
-	#reStart, #gallery	{
-		width: 70px;
-	  color: green;
-	  text-align: center;
-	  background-color: lightyellow;
-	  border:  2px solid blue;
-	  border-radius: 1em 1em 1em 1em;
+	  .world_map {
+	    margin-top: 0px;
+	    grid-column: 1 / 3;
+	    }
+		#reStart, #gallery	{
+			width: 70px;
+		  color: green;
+		  text-align: center;
+		  background-color: lightyellow;
+		  border:  2px solid blue;
+		  border-radius: 1em 1em 1em 1em;
 
-		margin:  10px auto;
-	  padding: 1em;
-		}
+			margin:  10px auto;
+		  padding: 1em;
+			}
 
 .container2 {
 	display: grid;
 	grid-template-columns: 170px 170px;
 	/* Container nach oben schieben */
-	margin-top: -605px;
+	margin-top: -630px;
 	}
 
 	.container2 img {
@@ -120,8 +120,8 @@ h2, h4 {
 	display: grid;
 	grid-template-columns: 170px 170px;
 	/* Container nach oben schieben */
-	margin-top: -570px;
-	/*margin-top: -620px;*/
+	/*margin-top: -570px;*/
+	margin-top: -620px;
 	}
 
 	.container4 img {
@@ -176,6 +176,12 @@ h2, h4 {
     margin-top: 0px;
     grid-column: 1 / 3;
     }
+	.counter	{
+		text-align: center;
+		color: blue;
+		font-weight: bold;
+		border:  1px solid blue;
+		}
 
 .container7 {
 	display: grid;
